--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
     - name: "Build with Gradle"
       run: |
        chmod +x gradlew
-       ./gradlew build -x ktlint
+       ./gradlew build
     - name: Post artifacts
       uses: actions/upload-artifact@v3
       with:
